# homectl-app

./: Cargo.toml  default.nix  index.html
src/: fetch.rs  log.rs  main.rs
