[package]
name = "homectl-app"
version = "0.1.0"
authors = ["Rasmus Eskola <fruitiex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/" }
yew-functional = { git = "https://github.com/yewstack/yew/" }
yew-services = { git = "https://github.com/yewstack/yew/" }
yew-router = { git = "https://github.com/yewstack/yew/" }
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0" }
yew-material = { git = "https://github.com/hamza1311/yew-material/", branch = "master", features = ["full"] }

[dependencies.web-sys]
version = "0.3.44"
features = [
  'console',
]